# mexicali-zone

./: .gitignore  accessibility.ipynb  blocks_built.ipynb  global_stats.ipynb  home_density.ipynb  pyproject.toml
src/mexicali_zone/: constants.py  utils.py
