[tool.poetry]
name = "mexicali-zone"
version = "0.1.0"
description = ""
authors = ["RodolfoFigueroa <4rodolfofigueroa2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
geopandas = "^1.0.1"
rasterio = "^1.4.3"
ipykernel = "^6.29.5"
matplotlib = "^3.9.3"
contextily = "^1.6.2"
seaborn = "^0.13.2"
osmnx = "^2.0.0"
scikit-learn = "^1.6.0"
pandana = "^0.7"
numpy="^1.26.4"
mapclassify = "^2.8.1"
plotly = "^5.24.1"
nbformat = "^5.10.4"
openpyxl = "^3.1.5"
python-dotenv = "^1.1.0"
notebook = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.basedpyright]
typeCheckingMode = "standard"
ignore = ["**/*.ipynb"]